--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.5",
         "paypal/rest-api-sdk-php": "^1.13",
-        "unisharp/laravel-filemanager": "^1.8"
+        "unisharp/laravel-filemanager": "^1.8",
+        "yajra/laravel-disqus": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
