Add built css and js to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,23 @@
 /node_modules
-/public/hot
-/public/storage
-/public/listing_images
-/storage/*.key
 /vendor
+
 /.idea
 /.vscode
 /.vagrant
+/resources/sass/.sass-cache
+
+/public/hot
+/public/storage
+/public/listing_images
+/public/css/app.css
+/public/css/app.css.map
+/public/js/app.js
+
+/storage/*.key
+
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
 .phpunit.result.cache
-/resources/sass/.sass-cache
