--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18",
     "bootstrap": "^4.0.0",
     "cross-env": "^5.1",
+    "imagesloaded": "^4.1.4",
     "jquery": "^3.2",
     "laravel-mix": "^2.0",
     "lodash": "^4.17.5",
