Added new resources to OP Resources page.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /public/hot
 /public/storage
 /public/listing_images
+/public/photos
 /public/css/app.css
 /public/css/app.css.map
 /public/js/app.js
